Fix(global header) : add collapse for viewport 768-1023px

--- a/scss/_orange-navbar.scss
+++ b/scss/_orange-navbar.scss
@@ -36,7 +36,7 @@
     }
   }
 
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(lg) {
     display: flex;
     .title {
       font-size: $navbar-orange-title-font-size;
